# enhanced-ai-agent-os-v2

./: .env  .env.example  README.md  UNIVERSAL_AIRLOCK_TESTING_REPORT.md  docker-compose.frontend.yml  docker-compose.monitoring.yml  docker-compose.yml  init_schema.py  test_document.txt  test_document_upload.py  test_parse_endpoint.py
deployment/: alert.rules  alertmanager.yml  monitoring-README.md  prometheus.yml
doc/: README.md  api-reference.md  architecture.md  configuration.md  development.md  installation.md  quick-start.md  troubleshooting.md  user-guide.md
docs/: monitoring-setup.md
frontend/training-validation/: index.html  package-lock.json  package.json  vite.config.ts
frontend/training-validation/src/: main.tsx
frontend/universal-airlock-ui/: AirlockDashboard.jsx  App.jsx  ChatInterface.jsx  index.html  package-lock.json  package.json  progress.jsx  tailwind.config.js  vite.config.js
frontend/universal-airlock-ui/src/: AirlockDashboard.jsx  App.css  App.jsx  ChatInterface.jsx  ValidationViewer.jsx  main.jsx  progress.jsx  routes.jsx  textarea.jsx
services/airlock_system/: Dockerfile  chat_system.py  main.py  pyproject.toml  requirements.txt
services/airlock_system/airlock_system/: main.py
services/airlock_system/tests/: debug_websocket.py  run_all_tests.py  test_api.py  test_load.py  test_security.py  test_websocket.py  test_websocket_comprehensive.py  test_websocket_load.py  test_websocket_multiclient.py  test_websocket_with_valid_id.py
services/core_services/orchestration_agent/: Dockerfile  pyproject.toml
services/creator_layer/design_agent/: Dockerfile  pyproject.toml
services/creator_layer/ideation_agent/: Dockerfile  pyproject.toml
services/creator_layer/social_media_manager/: Dockerfile  pyproject.toml
services/creator_layer/video_agent/: Dockerfile  pyproject.toml
services/data_architecture/: Dockerfile  main.py  pyproject.toml
services/data_architecture/governance/: knowledge_graph.py
services/data_architecture/streaming/: kafka_manager.py
services/data_architecture/vector_database/: pinecone_client.py
services/document_processing/document_engine/: Dockerfile  main.py  pyproject.toml
services/document_processing/document_engine/src/: document_parser.py
services/enterprise_layer/audit_service/: Dockerfile  pyproject.toml
services/enterprise_layer/compliance_engine/: Dockerfile  pyproject.toml
services/ideation/ideation/: airlock_integration.py
services/training-validation/: requirements.txt
services/training-validation/training_validation_service/: .env.example  Dockerfile  README.md  airlock_integration.py  main.py  pyproject.toml  validation_coordinator.py
services/training-validation/training_validation_service/api/: __init__.py  sessions.py
services/training-validation/training_validation_service/api/v1/endpoints/: documents.py  validation.py
services/training-validation/training_validation_service/integrations/: data_architecture_client.py  document_processing_client.py  web_intelligence_client.py
services/training-validation/training_validation_service/models/: __init__.py  validation_models.py
services/training-validation/training_validation_service/monitoring/: __init__.py  metrics.py
services/training-validation/training_validation_service/prompts/: validation_prompts.py
services/training-validation/training_validation_service/question_generation/: question_manager.py  smart_question_generator.py
services/training-validation/training_validation_service/reporting/: report_generator.py
services/training-validation/training_validation_service/schemas/: document_schema.py  unit_schema.py
services/training-validation/training_validation_service/services/: document_service.py  llm_service.py  question_generation_service.py  validation_service.py
services/training-validation/training_validation_service/validation_engines/: __init__.py  assessment_conditions_validator.py  base_validator.py  foundation_skills_validator.py  knowledge_evidence_validator.py  performance_evidence_validator.py  validation_gap.py
shared/database/: 0004_universal_airlock_schema.sql  01_initial_schema.sql  02_training_validation_schema.sql  03_airlock_schema.sql  04_universal_airlock_schema.sql
ui/: package-lock.json  package.json
ui/src/: App.tsx
ui/src/pages/: AirlockPage.tsx  (+1 more)
(+46 files in other folders)
