[tool.poetry]
name = "document-engine"
version = "0.1.0"
description = ""
authors = ["Devin AI <158243242+devin-ai-integration[bot]@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.116.1"
uvicorn = "^0.35.0"
unstructured-client = "^0.25.9"
python-dotenv = "^1.1.1"
python-multipart = "^0.0.18"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
