[tool.poetry]
name = "training-validation-service"
version = "0.1.0"
description = "Training Validation System for Enhanced AI Agent OS"
authors = ["Devin AI <158243242+devin-ai-integration[bot]@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
fastapi = "^0.116.1"
uvicorn = "^0.35.0"
asyncpg = "^0.29.0"
pydantic = "^2.10.4"
python-dotenv = "^1.1.1"
python-multipart = "^0.0.18"
httpx = "^0.28.1"
openai = "^1.58.1"
redis = "^5.2.1"
pinecone-client = "^5.0.1"
beautifulsoup4 = "^4.12.3"
lxml = "^5.3.0"
markdown = "^3.7"
jinja2 = "^3.1.4"
aiofiles = "^24.1.0"
textstat = "^0.7.3"
nltk = "^3.8.1"
unstructured = {extras = ["local-inference"], version = "^0.16.6"}
pdfminer-six = "^20231228"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
